--- a/apps/backend/overlays/prod/kustomization.yaml
+++ b/apps/backend/overlays/prod/kustomization.yaml
@@ -1,2 +1,23 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
+metadata:
+  name: backend-prod
+  annotations:
+    config.kubernetes.io/local-config: "true"
+
 resources:
 - ../../base
+
+patchesStrategicMerge: []
+
+replicas:
+- name: backend
+  count: 3
+
+images:
+- name: ghcr.io/mankinimbom/backend
+  newTag: "1.0.0"
+
+commonLabels:
+  environment: production
