--- a/apps/frontend/base/kustomization.yaml
+++ b/apps/frontend/base/kustomization.yaml
@@ -1,4 +1,19 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
+metadata:
+  name: frontend-base
+  annotations:
+    config.kubernetes.io/local-config: "true"
+
 resources:
 - deployment.yaml
 - service.yaml
 - nginx-config.yaml
+
+commonLabels:
+  app: frontend
+  tier: web
+  version: v1
+
+namespace: prod
