--- a/namespace/kustomization.yaml
+++ b/namespace/kustomization.yaml
@@ -2,17 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 metadata:
-  name: backend-base
+  name: prod-namespace
   annotations:
     config.kubernetes.io/local-config: "true"
 
 resources:
-- deployment.yaml
-- service.yaml
-
-commonLabels:
-  app: backend
-  tier: api
-  version: v1
-
-namespace: prod
+- prod-namespace.yaml
