--- a/rollouts/frontend-rollout.yaml
+++ b/rollouts/frontend-rollout.yaml
@@ -2,6 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Rollout
 metadata:
   name: frontend
+  namespace: prod
 spec:
   replicas: 2
   selector:
@@ -12,6 +13,11 @@ spec:
       labels:
         app: frontend
     spec:
+      automountServiceAccountToken: false
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 101
+        fsGroup: 101
       containers:
       - name: frontend
         image: ghcr.io/mankinimbom/frontend:1.0.0
@@ -36,6 +42,7 @@ spec:
           requests:
             cpu: "250m"
             memory: "256Mi"
+            ephemeral-storage: "1Gi"
         volumeMounts:
         - name: nginx-config
           mountPath: /etc/nginx/conf.d
