--- a/argocd/apps/frontend.yaml
+++ b/argocd/apps/frontend.yaml
@@ -6,6 +6,14 @@ metadata:
   labels:
     app: frontend
     environment: production
+    tier: web
+  annotations:
+    argocd.argoproj.io/sync-wave: "3"
+    argocd-image-updater.argoproj.io/image-list: frontend=ghcr.io/mankinimbom/frontend
+    argocd-image-updater.argoproj.io/write-back-method: git
+    argocd-image-updater.argoproj.io/write-back-target: kustomization
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io
 spec:
   project: prod
   source:
@@ -21,3 +29,17 @@ spec:
       selfHeal: true
     syncOptions:
     - CreateNamespace=true
+    - PrunePropagationPolicy=foreground
+    - ApplyOutOfSyncOnly=true
+    retry:
+      limit: 5
+      backoff:
+        duration: 5s
+        factor: 2
+        maxDuration: 3m
+  revisionHistoryLimit: 3
+  ignoreDifferences:
+  - group: apps
+    kind: Deployment
+    jsonPointers:
+    - /spec/replicas
