--- a/rollouts/frontend-rollout.yaml
+++ b/rollouts/frontend-rollout.yaml
@@ -1,10 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Rollout
 metadata:
-  name: frontend
+  name: frontend-rollout
   namespace: prod
+  labels:
+    app: frontend
+    tier: web
+    component: rollout
 spec:
-  replicas: 2
+  replicas: 3
   selector:
     matchLabels:
       app: frontend
@@ -12,33 +16,70 @@ spec:
     metadata:
       labels:
         app: frontend
+        tier: web
+        version: v1
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "80"
+        prometheus.io/path: "/metrics"
     spec:
+      serviceAccountName: frontend-sa
       automountServiceAccountToken: false
       securityContext:
         runAsNonRoot: true
         runAsUser: 101
         fsGroup: 101
+        seccompProfile:
+          type: RuntimeDefault
       containers:
       - name: frontend
         image: ghcr.io/mankinimbom/frontend:1.0.0
+        imagePullPolicy: Always
         ports:
-        - containerPort: 80
+        - name: http
+          containerPort: 80
+          protocol: TCP
+        securityContext:
+          allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
+          runAsNonRoot: true
+          runAsUser: 101
+          capabilities:
+            drop:
+            - ALL
         readinessProbe:
           httpGet:
-            path: /
+            path: /health
             port: 80
+            scheme: HTTP
           initialDelaySeconds: 5
           periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
+          successThreshold: 1
         livenessProbe:
           httpGet:
-            path: /
+            path: /health
             port: 80
+            scheme: HTTP
           initialDelaySeconds: 10
           periodSeconds: 20
+          timeoutSeconds: 5
+          failureThreshold: 3
+        startupProbe:
+          httpGet:
+            path: /health
+            port: 80
+            scheme: HTTP
+          initialDelaySeconds: 5
+          periodSeconds: 5
+          timeoutSeconds: 5
+          failureThreshold: 30
         resources:
           limits:
             cpu: "500m"
             memory: "512Mi"
+            ephemeral-storage: "2Gi"
           requests:
             cpu: "250m"
             memory: "256Mi"
@@ -46,15 +87,36 @@ spec:
         volumeMounts:
         - name: nginx-config
           mountPath: /etc/nginx/conf.d
+          readOnly: true
+        - name: tmp
+          mountPath: /tmp
+        - name: var-cache
+          mountPath: /var/cache/nginx
+        - name: var-run
+          mountPath: /var/run
       volumes:
       - name: nginx-config
         configMap:
           name: nginx-config
+          defaultMode: 0644
+      - name: tmp
+        emptyDir: {}
+      - name: var-cache
+        emptyDir: {}
+      - name: var-run
+        emptyDir: {}
   strategy:
     canary:
+      maxSurge: "25%"
+      maxUnavailable: 0
       steps:
       - setWeight: 20
       - pause: {duration: 60}
-      - setWeight: 50
-      - pause: {duration: 120}
+      - setWeight: 40
+      - pause: {duration: 60}
+      - setWeight: 60
+      - pause: {duration: 60}
+      - setWeight: 80
+      - pause: {duration: 60}
       - setWeight: 100
+  revisionHistoryLimit: 5
