--- a/secrets/backend-secrets.yaml
+++ b/secrets/backend-secrets.yaml
@@ -3,8 +3,20 @@ kind: Secret
 metadata:
   name: backend-secrets
   namespace: prod
+  labels:
+    app: backend
+    tier: api
+    component: secrets
+  annotations:
+    kubernetes.io/description: "Backend application secrets"
 type: Opaque
 stringData:
   DB_USER: produser
   DB_PASS: prodpass
+  DB_HOST: database.prod.svc.cluster.local
+  DB_PORT: "5432"
+  DB_NAME: proddb
   JWT_SECRET: prodjwtsecret
+  REDIS_URL: redis://redis.prod.svc.cluster.local:6379
+  NODE_ENV: production
+  LOG_LEVEL: info
