--- a/secrets/kustomization.yaml
+++ b/secrets/kustomization.yaml
@@ -2,18 +2,15 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 metadata:
-  name: backend-base
+  name: prod-secrets
   annotations:
     config.kubernetes.io/local-config: "true"
 
 resources:
-- serviceaccount.yaml
-- deployment.yaml
-- service.yaml
+- backend-secrets.yaml
 
 commonLabels:
-  app: backend
-  tier: api
-  version: v1
+  environment: production
+  managed-by: argocd
 
 namespace: prod
