--- a/apps/backend/base/service.yaml
+++ b/apps/backend/base/service.yaml
@@ -3,9 +3,19 @@ kind: Service
 metadata:
   name: backend
   namespace: prod
+  labels:
+    app: backend
+    tier: api
+    component: service
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
 spec:
+  type: ClusterIP
   selector:
     app: backend
   ports:
-  - port: 80
+  - name: http
+    port: 80
     targetPort: 3000
+    protocol: TCP
+  sessionAffinity: None
