--- a/apps/frontend/base/nginx-config.yaml
+++ b/apps/frontend/base/nginx-config.yaml
@@ -3,16 +3,71 @@ kind: ConfigMap
 metadata:
   name: nginx-config
   namespace: prod
+  labels:
+    app: frontend
+    tier: web
+    component: config
 data:
   default.conf: |
+    upstream backend {
+        server backend:80 max_fails=3 fail_timeout=30s;
+    }
+    
     server {
-      listen 80;
-      server_name _;
-      root /usr/share/nginx/html;
-      location / {
-        try_files $uri /index.html;
-      }
-      location /api/ {
-        proxy_pass http://backend:80/;
-      }
+        listen 80;
+        server_name _;
+        root /usr/share/nginx/html;
+        index index.html;
+        
+        # Security headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        
+        # Gzip compression
+        gzip on;
+        gzip_vary on;
+        gzip_min_length 1024;
+        gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
+        
+        # Health check endpoint
+        location /health {
+            access_log off;
+            return 200 "healthy\n";
+            add_header Content-Type text/plain;
+        }
+        
+        # API proxy
+        location /api/ {
+            proxy_pass http://backend/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
+            proxy_buffering on;
+            proxy_buffer_size 4k;
+            proxy_buffers 8 4k;
+        }
+        
+        # Static files
+        location / {
+            try_files $uri $uri/ /index.html;
+            expires 1h;
+            add_header Cache-Control "public, immutable";
+        }
+        
+        # Cache static assets
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+        
+        # Deny access to sensitive files
+        location ~ /\. {
+            deny all;
+        }
     }
