--- a/argocd/apps/kustomization.yaml
+++ b/argocd/apps/kustomization.yaml
@@ -2,18 +2,18 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 metadata:
-  name: backend-base
+  name: argocd-apps
   annotations:
     config.kubernetes.io/local-config: "true"
 
 resources:
-- serviceaccount.yaml
-- deployment.yaml
-- service.yaml
+- namespace.yaml
+- secrets.yaml
+- backend.yaml
+- frontend.yaml
 
 commonLabels:
-  app: backend
-  tier: api
-  version: v1
+  environment: production
+  managed-by: argocd
 
-namespace: prod
+namespace: argocd
