--- a/argocd/apps/secrets.yaml
+++ b/argocd/apps/secrets.yaml
@@ -1,13 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: prod-app-of-apps
+  name: prod-secrets
   namespace: argocd
   labels:
+    app: secrets
     environment: production
-    team: devops
+    component: infrastructure
   annotations:
-    argocd.argoproj.io/sync-wave: "0"
+    argocd.argoproj.io/sync-wave: "1"
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
@@ -15,10 +16,10 @@ spec:
   source:
     repoURL: https://github.com/mankinimbom/prod-gitops.git
     targetRevision: main
-    path: argocd/apps
+    path: secrets
   destination:
     server: https://kubernetes.default.svc
-    namespace: argocd
+    namespace: prod
   syncPolicy:
     automated:
       prune: true
