--- a/argocd/project.yaml
+++ b/argocd/project.yaml
@@ -15,6 +15,19 @@ spec:
   destinations:
   - namespace: prod
     server: https://kubernetes.default.svc
+  - namespace: argocd
+    server: https://kubernetes.default.svc
   clusterResourceWhitelist:
   - group: '*'
     kind: '*'
+  namespaceResourceWhitelist:
+  - group: '*'
+    kind: '*'
+  roles:
+  - name: admin
+    description: Admin role for prod project
+    policies:
+    - p, proj:prod:admin, applications, *, prod/*, allow
+    - p, proj:prod:admin, exec, create, prod/*, allow
+    groups:
+    - devops-team
