--- a/apps/frontend/base/nginx-config.yaml
+++ b/apps/frontend/base/nginx-config.yaml
@@ -14,7 +14,7 @@ data:
     }
     
     server {
-        listen 80;
+        listen 8080;
         server_name _;
         root /usr/share/nginx/html;
         index index.html;
@@ -70,4 +70,33 @@ data:
         location ~ /\. {
             deny all;
         }
+    }
+  nginx.conf: |
+    # Run as a non-root user
+    # user nginx;  # This line is commented out for non-root containers
+    worker_processes auto;
+    error_log /var/log/nginx/error.log warn;
+    pid /var/run/nginx.pid;
+    
+    events {
+        worker_connections 1024;
+    }
+    
+    http {
+        include /etc/nginx/mime.types;
+        default_type application/octet-stream;
+        
+        log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                        '$status $body_bytes_sent "$http_referer" '
+                        '"$http_user_agent" "$http_x_forwarded_for"';
+        
+        access_log /var/log/nginx/access.log main;
+        
+        sendfile on;
+        tcp_nopush on;
+        tcp_nodelay on;
+        keepalive_timeout 65;
+        types_hash_max_size 2048;
+        
+        include /etc/nginx/conf.d/*.conf;
     }
